# tuix

./: .gitignore  AGENTS.md  Cargo.toml  Containerfile  Makefile  README.md
.agents/: CYNEFIN.md  LESSONS.md  PERSONALITY.md  REQUIREMENTS.md
.claude/: settings.json
.sdlc/: adr-cli-help-and-error-feedback.md  adr-ctrl-bracket-hotkey-fix.md  adr-cursor-visibility.md  adr-focus-view-scrolling.md  adr-in-program-help-screen.md  adr-lru-vulnerability-fix.md  adr-tile-view-resize.md  adr-tuix-terminal-multiplexer.md  code-review-cli-help-and-error-feedback.md  code-review-in-program-help-screen.md  code-review-tile-view-resize.md  code-review-tuix-terminal-multiplexer.md  impl-report-cli-help-and-error-feedback.md  impl-report-in-program-help-screen.md  impl-report-tile-view-resize.md  impl-report-tuix-terminal-multiplexer.md  quality-report-cli-help-and-error-feedback.md  quality-report-in-program-help-screen.md  quality-report-tile-view-resize.md  quality-report-tuix-terminal-multiplexer.md  sar-cli-help-and-error-feedback.md  sar-in-program-help-screen.md  sar-tile-view-resize.md  sar-tuix-terminal-multiplexer.md  security-audit-cli-help-and-error-feedback.md  security-audit-in-program-help-screen.md  security-audit-tile-view-resize.md  security-audit-tuix-terminal-multiplexer.md  sprint-brief-cli-help-and-error-feedback.md  sprint-brief-in-program-help-screen.md  sprint-brief-tile-view-resize.md  sprint-brief-tuix-terminal-multiplexer.md
src/: app.rs  color.rs  config.rs  event.rs  focus_view.rs  help_view.rs  input.rs  layout.rs  lib.rs  main.rs  session.rs  vt.rs  (+2 more)
(+21 files in other folders)
