[package]
name = "tuix"
version = "0.1.0"
edition = "2021"
description = "Terminal session multiplexer TUI"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
vt100 = "0.15"
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
